# windy-connect

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WAVE-STATUS.md  pyproject.toml
.github/workflows/: ci.yml  prod-drift.yml  release.yml
backend/: MIGRATIONS.md  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
backend/scripts/: deploy.sh
backend/src/: codes.ts  eternitas_jwks.ts  http.ts  index.ts  magic_link.ts  provision.ts  sessions_do.ts  store.ts  types.ts
backend/src/routes/: bundle.ts  device.ts  magic_pair.ts  oauth.ts  pair.ts  skills.ts  status.ts  version.ts
backend/test/: device.test.ts  eternitas_jwks.test.ts  http.test.ts  provision.test.ts  status.test.ts
docs/: bundle-spec-v1.md  dns-plan.md  oauth-setup.md  pypi-setup.md  upstream-gaps.md
docs/adr/: adr-052-two-tier-ecosystem-access-2026-05-20.md
installer/: README.md  install.sh
skills/openclaw-clawhub/: README.md  SKILL.md  skill.json
skills/windy-access/: SKILL.md
src/windy_connect/: __init__.py  __main__.py  _mock_bundle.py  bundle.py  cli.py  detect.py  doctor.py  orchestrator.py  state.py
src/windy_connect/writers/: __init__.py  base.py  claude_code.py  generic.py  hermes.py  openclaw.py
tests/: conftest.py  test_bundle.py  test_doctor.py  test_lifecycle.py  test_state.py  test_writers.py
