[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "windy-connect"
version = "0.1.0"
description = "Wire any AI agent into the Windy ecosystem in one command."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Windy" },
]
keywords = ["agent", "ai", "eternitas", "windy", "credentials", "matrix", "imap"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Chat",
  "Topic :: Communications :: Email",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
windy = "windy_connect.cli:app"

[project.urls]
Homepage = "https://windyconnect.com"
Source = "https://github.com/sneakyfree/windy-connect"

[tool.hatch.build.targets.wheel]
packages = ["src/windy_connect"]

[tool.hatch.build.targets.sdist]
include = [
  "src/windy_connect",
  "tests",
  "README.md",
  "pyproject.toml",
]
exclude = [
  "backend",
  "skills",
  "installer",
  "docs",
  "**/node_modules",
  "**/__pycache__",
  "**/.pytest_cache",
  "**/.ruff_cache",
  "**/.mypy_cache",
  "**/.wrangler",
  "**/.dev.vars",
  "**/dist",
  "**/build",
  "**/*.egg-info",
]

[tool.ruff]
line-length = 100
target-version = "py311"
